--- a/TCV.ipynb
+++ b/TCV.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "e50484d7",
    "metadata": {},
    "outputs": [
@@ -43,7 +43,24 @@
       "Epoch 1/10 completed.\n",
       "Epoch 2/10 completed.\n",
       "Epoch 3/10 completed.\n",
-      "Epoch 4/10 completed.\n"
+      "Epoch 4/10 completed.\n",
+      "Epoch 5/10 completed.\n",
+      "Epoch 6/10 completed.\n",
+      "Epoch 7/10 completed.\n",
+      "Epoch 8/10 completed.\n",
+      "Epoch 9/10 completed.\n",
+      "Epoch 10/10 completed.\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "       Glass       0.97      0.88      0.92        83\n",
+      "       Metal       0.88      0.88      0.88        90\n",
+      "       Paper       0.82      0.82      0.82        34\n",
+      "     Plastic       0.81      0.89      0.85        87\n",
+      "\n",
+      "    accuracy                           0.87       294\n",
+      "   macro avg       0.87      0.87      0.87       294\n",
+      "weighted avg       0.88      0.87      0.88       294\n",
+      "\n"
      ]
     }
    ],
